# iclicker-evade

./: .env.example  .gitignore  README.md  app.py  app_old.py  class_functions.py  iclicker_signin.py  pyproject.toml
ai_services/: __init__.py  base_ai_service.py  claude_service.py  gemini_service.py  openai_service.py
config/: __init__.py  settings.py
monitoring/: __init__.py  question_monitor.py
notifications/: __init__.py  email_service.py
school_logins/: __init__.py  purdue_login.py
utils/: __init__.py  browser_utils.py  validators.py
